[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "atpbar"
dynamic = ["version"]
description = "Progress bars for threading and multiprocessing tasks"
readme = "README.md"
requires-python = ">=3.10"
license = ""
authors = [{ name = "Tai Sakuma", email = "tai.sakuma@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
jupyter = ["ipywidgets>=8.1"]
tests = ["pytest-console-scripts>=1.4", "pytest-cov>=5.0", "pytest>=8.2"]
doc = ["mkdocs-material>=9.5", "pymdown-extensions>=10.8"]

[project.urls]
Homepage = "https://github.com/alphatwirl/atpbar"

[tool.hatch.version]
source = "regex_commit"
path = "atpbar/__about__.py"
tag_sign = false

[tool.hatch.build.targets.sdist]
include = ["/atpbar"]

[tool.pytest.ini_options]
addopts = """
--doctest-modules
--doctest-glob='*.md'
--ignore=examples/
--ignore=atpbar/presentation/
"""
# doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
doctest_optionflags = ["ELLIPSIS"]

[tool.black]
# Doesn't appear to be effective with VSCode extension Black Formatter
skip-string-normalization = true

[tool.isort]
profile = "black"


[[tool.mypy.overrides]]
module = ["ipywidgets"]
ignore_missing_imports = true
